--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,8 @@ authors = ["Masterchef365 <duncan.freeman1@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-klystron = { git = "https://github.com/Masterchef365/klystron.git" }
-#klystron = { path = "../klystron/" }
+#klystron = { git = "https://github.com/Masterchef365/klystron.git" }
+klystron = { path = "../klystron/" }
 anyhow = "1.0"
 nalgebra = "0.22"
 notify = "4.0"
